# superalignment-chatroom

./: .gitignore  CITATION_CHECKING.md  IMPLEMENTATION_SUMMARY.md  MATRIX_SETUP.md  MESSAGE_DEDUPLICATION.md  QUICKSTART.md  QUICK_START_TRIGGERS.md  README.md  SECURITY.md  SETUP.md  TEST_RESULTS_TRIGGER_MATRIX_20251101.md  TRIGGER_MONITOR.md  VM_DEPLOYMENT_STATUS.md
chatroom/: .240mo-extended-validation_active  .architecture_active  .bug-fix_active  .coffee-talk_active  .coordination_active  .implementation_active  .orchestrator_handoff_to_researcher_dashboard.md  .phase1b-validation-debate_active  .phase1c-validation-debate_active  .research-critique_active  .research_active  .research_orchestrator_lastread  .roadmap_active  .typescript-errors_active  README.md  coordination.md  monitor-state-implementation.txt  monitor-state-research.txt  research-consensus-20251028_211620.txt  research-consensus-20251028_213954.txt  research-consensus-20251028_213957.txt  research-consensus-20251028_214010.txt  research-consensus-20251028_214708.txt  research-consensus-20251028_214729.txt  research-consensus-20251028_214818.txt  research-consensus-20251028_215757.txt  research-consensus-20251028_215922.txt  research-consensus-20251028_215926.txt  research-consensus-20251028_220341.txt  research-consensus-20251028_220455.txt  research-consensus-20251028_230145.txt  research-consensus-20251028_230150.txt  research-consensus-20251028_232315.txt  research-consensus-20251029_000703.txt  (+12 more)
matrix-fastmcp-server/: pyproject.toml  run.sh
matrix-fastmcp-server/src/: matrix_server.py
(+1874 files in other folders)
