[project]
name = "matrix-fastmcp-server"
version = "0.1.0"
description = "FastMCP-based Matrix server for Claude Code (stdio mode)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "matrix-nio>=0.24.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
